--- a/webfonts/index.html
+++ b/webfonts/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/all.css">
   <link rel="icon" type="jpd/png" href="img/logo.png">
   <link rel="stylesheet" href="css/style.css">
-  <title>Restaurant</title>
+  <title>CCC2020</title>
 </head>
 
 <body>
@@ -32,22 +32,22 @@
             <a class="nav-link" href="#about">About Us</a>
           </li>
           <li class="nav-item">
-            <!-- <a class="nav-link" href="#">E-Commerce</a> -->
+            <a class="nav-link" href="#">E-Commerce</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#export-import">Call us</a>
+            <a class="nav-link" href="#export-import">Export & Import Service</a>
           </li>
           <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Others
             </a>
-            <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#door-to-door">Door to Door Service</a>
               <a class="dropdown-item" href="#financial-service">Financial Service</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#contact">Contact Us</a>
-            </div> -->
+            </div>
           </li>
         </ul>
       </div>
@@ -63,11 +63,11 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
 
-          <img src="https://images.unsplash.com/photo-1476224203421-9ac39bcb3327?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="d-block w-100 carousel-img" alt="...">
+          <img src="img/bg-1.jpg" class="d-block w-100 carousel-img" alt="...">
           <div class="overlay"></div>
           <div class="carousel-caption d-md-block">
             <h1>
-              <span>A</span><span>N</span><span>I</span><span>S</span><span>H</span><span>A</span>,<span></span><span>K</span><span>I</span><span>T</span><span>C</span>H</span><span>E</span><span>N</span><span>!</span>
+              <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span><span>,</span><span>C</span><span>C</span><span>C</span><span>2</span>0</span><span>2</span><span>0</span><span>!</span>
             </h1>
             <a href="#" class="exp">
               <h5>Explore More</h5>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="d-block w-100 carousel-img" alt="...">
+          <img src="img/bg-2.jpg" class="d-block w-100 carousel-img" alt="...">
           <div class="overlay"></div>
           <div class="carousel-caption d-md-block">
             <h1 class="heading" data-target-resolver></h1>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="d-block w-100 carousel-img" alt="...">
+          <img src="img/bg-3.jpg" class="d-block w-100 carousel-img" alt="...">
           <div class="overlay"></div>
           <div class="carousel-caption d-md-block">
             <h1 class="s-3"><span style="font-size: 3rem;">"Wanna Buy</span><span>from online?"</span></h1>
@@ -106,7 +106,7 @@
       </a>
     </div>
   </div>
-  <!-- <section id="about">
+  <section id="about">
     <h2 class="about-header">- About Us -</h2>
     <div class="container">
       <div class="row">
@@ -264,7 +264,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <section class="contact-section section" id="contact" style="background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/contact-bg.jpg); background-position: cover;">
     <h2 class="contact" style="color: #ffffff;">- Contact Us -</h1>
     <div class="container">
