--- a/index.html
+++ b/index.html
@@ -272,18 +272,18 @@
         <div class="contact-info-item">
           <div class="icon"><i class="fas fa-phone"></i></div>
           <h4>Call us</h4>
-          <p><a href="tel:+33 768805210" target="_blank" style="color: #ffffff;">+33 768805210</a></p>
+          <p><a href="tel:+33 768805210" target="_blank" style="color: #ffffff;"></a></p>
         </div>
         <div class="contact-info-item ">
           <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
           <h4>Office</h4>
-          <p><a href="https://goo.gl/maps/xwT4ZVrg8cydHSeU8" target="_blank" style="color:#ffffff">Saint-Germain-en-Laye
-            ,France</a></p>
+          <p><a href="https://goo.gl/maps/xwT4ZVrg8cydHSeU8" target="_blank" style="color:#ffffff">
+            e</a></p>
         </div>
         <div class="contact-info-item ">
           <div class="icon"><i class="fas fa-envelope"></i></div>
           <h4>E-mail</h4>
-          <p><a href="mailto:soronul@gmail.com" target="_blank" style="color: #ffffff;">soronul@gmail.com</a></p>
+          <p><a href="mailto:soronul@gmail.com" target="_blank" style="color: #ffffff;"></a></p>
         </div>
       </div>
       <div class="row">
