--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
   <link rel="stylesheet" href="css/all.css">
-  <link rel="icon" type="jpd/png" href="img/logo.png">
+  <!-- <link rel="icon" type="jpd/png" href="img/logo.png"> -->
   <link rel="stylesheet" href="css/style.css">
   <title>Restaurant</title>
 </head>
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img class="img-fluid" src="img/logo.png" alt=""></a>
+      <!-- <a class="navbar-brand" href="#"><img class="img-fluid" src="img/logo.png" alt=""></a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
